fixed spacing

--- a/style.css
+++ b/style.css
@@ -522,7 +522,15 @@ button[type="submit"]:hover{
         margin-right: 5px;
         
     }
-   
+    .intro{
+        padding: 5%;
+    }
+    .intro-text h1{
+        height: 140px;
+    }
+    .typing-animation{
+        display: block;
+    }
     .intro-image{
         width: 35%;
     }
@@ -620,7 +628,7 @@ button[type="submit"]:hover{
     }
     .intro{
         flex-direction: column-reverse;
-        padding: 10px;
+        padding: 10px 15px;
        
     }
     .intro-text h1 {
@@ -628,8 +636,9 @@ button[type="submit"]:hover{
         height: 145px;
     }
     .intro-image{
-        width: 40%;
-        margin-bottom: 20px;
+       /* width: 40%;
+        margin-bottom: 20px; */
+        display: none;
     }
     .intro-text{
         width: 100%;
@@ -642,7 +651,9 @@ button[type="submit"]:hover{
         padding: 10px;
     }
     .service-container{
-        display: block;
+        flex-direction: column;
+        align-items: center;
+         gap: 20px;
         
     }
     .skills{
